mdbook updated to v0.4.7

--- a/course_notes.html
+++ b/course_notes.html
@@ -162,11 +162,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#course-notes" id="course-notes">Course Notes</a></h1>
+                        <h1 id="course-notes"><a class="header" href="#course-notes">Course Notes</a></h1>
 <p>I love to design and teach new, and sometimes old, courses.
-Below are notes and problem sets from several of my course.
+Below are notes and problem sets from several of my courses.
 Most notes are accessible to undergraduate and advanced high-school students.</p>
-<h3><a class="header" href="#a-hrefmathcamphtmlcanadausa-mathcampa" id="a-hrefmathcamphtmlcanadausa-mathcampa"><a href="mathcamp.html">Canada/USA Mathcamp</a></a></h3>
+<h3 id="a-hrefmathcamphtmlcanadausa-mathcampa"><a class="header" href="#a-hrefmathcamphtmlcanadausa-mathcampa"><a href="mathcamp.html">Canada/USA Mathcamp</a></a></h3>
 <ul>
 <li><a href="mathcamp.html#lean-at-mc2020">Lean at MC2020</a></li>
 <li><a href="mathcamp.html#crash-course-on-linear-algebra">Crash Course on Linear Algebra</a></li>
@@ -182,13 +182,13 @@ Most notes are accessible to undergraduate and advanced high-school students.</p
 <li><a href="mathcamp.html#euler-characteristic">Euler Characteristic</a></li>
 <li><a href="mathcamp.html#symmetries-of-spaces">Symmetries of Spaces</a></li>
 </ul>
-<h3><a class="header" href="#a-hrefjhuhtmljhujhua" id="a-hrefjhuhtmljhujhua"><a href="jhu.html#jhu">JHU</a></a></h3>
+<h3 id="a-hrefjhuhtmljhujhua"><a class="header" href="#a-hrefjhuhtmljhujhua"><a href="jhu.html#jhu">JHU</a></a></h3>
 <ul>
 <li><a href="jhu.html#honors-single-variable-calculus">Honors Single Variable Calculus</a></li>
 <li><a href="jhu.html#symmetries--polynomials">Symmetries &amp; Polynomials</a></li>
 <li><a href="jhu.html#hitchhikers-guide-to-algebraic-topology-intersession-17">Hitchhiker's Guide to Algebraic Topology, Intersession '17</a></li>
 </ul>
-<h3><a class="header" href="#a-hrefuwohtmluwouwoa" id="a-hrefuwohtmluwouwoa"><a href="uwo.html#uwo">UWO</a></a></h3>
+<h3 id="a-hrefuwohtmluwouwoa"><a class="header" href="#a-hrefuwohtmluwouwoa"><a href="uwo.html#uwo">UWO</a></a></h3>
 <ul>
 <li><a href="uwo.html#algebraic-topology">Algebraic Topology</a></li>
 <li><a href="uwo.html#discrete-math">Discrete Math</a></li>
