--- a/drp.html
+++ b/drp.html
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#drp" id="drp">DRP</a></h1>
+                        <h1 id="drp"><a class="header" href="#drp">DRP</a></h1>
 <p>The Directed Reading Program is a program in which undergrads are paired with a graduate student/postdoc whose interests align with theirs and they study a topic of their choice for one semester.
 It is intended to help motivated students explore topics in more depth than possible in a classroom setting.</p>
 <p>I've helped start and organize the <a href="https://www.math.uwo.ca/undergraduate/directedreadingprogram.html">DRP at UWO</a> and in the past have co-organized the <a href="http://www.math.jhu.edu/drp.html">DRP at JHU</a>.
