--- a/etc.html
+++ b/etc.html
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#etc" id="etc">Etc.</a></h1>
+                        <h1 id="etc"><a class="header" href="#etc">Etc.</a></h1>
 <figure class="right">
     <a href="https://www.gocomics.com/sarahs-scribbles/2014/1/17">
         <img src="images/books.gif" width="250px" class="right" />
@@ -175,12 +175,12 @@ and my <a href="https://notleftasanexercise.wordpress.com/">blog about teaching<
 I bake a lot and am an avid yoga practitioner.
 I'm a huge organizational nerd and a big fan of org-mode.
 In a past life, I was involved with the following:</p>
-<h3><a class="header" href="#london-ontario" id="london-ontario">London, Ontario</a></h3>
+<h3 id="london-ontario"><a class="header" href="#london-ontario">London, Ontario</a></h3>
 <ul>
 <li><a href="https://www.yogashack.ca/">Yoga Shack</a></li>
 <li><a href="https://westcoastswinglondon.ca/">West Coast Swing</a></li>
 </ul>
-<h3><a class="header" href="#baltimore" id="baltimore">Baltimore</a></h3>
+<h3 id="baltimore"><a class="header" href="#baltimore">Baltimore</a></h3>
 <ul>
 <li><a href="https://www.yogaworks.com/baltimore/">Yogaworks</a></li>
 <li><a href="https://studentaffairs.jhu.edu/recreation/experiential-education/trips/">Hiking at JHU</a></li>
