--- a/math.html
+++ b/math.html
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#math" id="math">Math</a></h1>
+                        <h1 id="math"><a class="header" href="#math">Math</a></h1>
 <p>I got interested in math as a kid thanks to several math competitions.
 I have spent some time doing research during my grad school and postdoc.
 Now, I find myself most interested in working on improving math education at the university level.</p>
