--- a/mathcamp.html
+++ b/mathcamp.html
@@ -163,52 +163,52 @@
                 <div id="content" class="content">
                     <main>
                         <!-- # Mathcamp -->
-<h1>
-    <a href="#Mathcamp" id="Mathcamp" class="header">
+<h1 id="Mathcamp">
+    <a href="#Mathcamp" class="header">
         Canada/USA <img src="images/mathcamp.png" width="200rem" id="mathcamp"> 
     </a>
 </h1>
-<h2><a class="header" href="#lean-at-mc2020" id="lean-at-mc2020">Lean at MC2020</a></h2>
+<h2 id="lean-at-mc2020"><a class="header" href="#lean-at-mc2020">Lean at MC2020</a></h2>
 <p><a href="https://apurvanakade.github.io/courses/lean_at_MC2020/index.html">Notes.</a></p>
 <p>I taught this week long class at Mathcamp 2020 introducing students to the Lean theorem prover.
 The class is completely interactive - you learn by solving exercises and coding snippets online.
 The only prerequisites for this class are basic proof techniques, although it is recommended that you simultaneously use the other resources linked in the notes.
 Towards the end of the class we teach Lean the proof of irrationality of \( \sqrt{2} \).</p>
-<h2><a class="header" href="#crash-course-on-linear-algebra" id="crash-course-on-linear-algebra">Crash Course on Linear Algebra</a></h2>
+<h2 id="crash-course-on-linear-algebra"><a class="header" href="#crash-course-on-linear-algebra">Crash Course on Linear Algebra</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2019-linear-algebra/blob/master/output/index.pdf">Notes.</a></p>
 <p>I taught this week-long class at Mathcamp 2018 as a proof-based introduction to Linear Algebra.
 The prerequisites for this class are basic proof techniques.
 The class is designed in an IBL-format - you're expected to solve all the problems in each section before moving to the next and in the process learn the subject.
 The notes are quite terse and are meant to be challenging.</p>
-<h2><a class="header" href="#galois-correspondence-of-covering-spaces" id="galois-correspondence-of-covering-spaces">Galois Correspondence of Covering Spaces</a></h2>
+<h2 id="galois-correspondence-of-covering-spaces"><a class="header" href="#galois-correspondence-of-covering-spaces">Galois Correspondence of Covering Spaces</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2019-Galois-correspondence-of-covering-spaces/blob/main/output/index.pdf">Notes.</a></p>
 <p>I taught this week-long class at Mathcamp 2019.
 It covers (pun intended) the covering space theory for graphs and surfaces and is meant to be an introduction to algebraic topology and its connection to group theory.
 The prerequisites are group theory and basic minimal exposure to topology/analysis.</p>
-<h2><a class="header" href="#from-high-school-arithmetic-to-group-cohomology" id="from-high-school-arithmetic-to-group-cohomology">From High School Arithmetic to Group Cohomology</a></h2>
+<h2 id="from-high-school-arithmetic-to-group-cohomology"><a class="header" href="#from-high-school-arithmetic-to-group-cohomology">From High School Arithmetic to Group Cohomology</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2019-group-cohomology/blob/main/output/index.pdf">Notes.</a></p>
 <p>I taught this week-long class Mathcamp 2019.
 It is based on a fun paper by Dan Isaken called <a href="https://www.jstor.org/stable/3072368?seq=1">A cohomological viewpoint of elementary school arithmetic</a>.
 The class introduces the notions of group extensions and exact sequences as a way of interpreting addition of multi-digit numbers.
 It is designed in an IBL-format - you're expected to solve all the problems in each section before moving to the next and in the process learn the subject.
 The prerequisites are group theory.</p>
-<h2><a class="header" href="#cohomology-via-sheaves" id="cohomology-via-sheaves">Cohomology via Sheaves</a></h2>
+<h2 id="cohomology-via-sheaves"><a class="header" href="#cohomology-via-sheaves">Cohomology via Sheaves</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2018-cohomology-via-sheaves/blob/main/output/index.pdf">Notes.</a></p>
 <p>I taught this week-long class at Mathcamp 2018.
 It introduces the notion of Čech cohomology on graphs and we compute cohomologies of some simple spaces.
 The class is designed in an IBL-format - you're expected to solve all the problems in each section before moving to the next and in the process learn the subject.
 The prerequisites are linear algebra (over finite fields).</p>
-<h2><a class="header" href="#how-curved-is-a-potato" id="how-curved-is-a-potato">How Curved Is a Potato?</a></h2>
+<h2 id="how-curved-is-a-potato"><a class="header" href="#how-curved-is-a-potato">How Curved Is a Potato?</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2018-how-curved-is-a-potato/blob/main/output/index.pdf">Notes.</a></p>
 <p>I taught this week-long class at Mathcamp 2018.
 In this class, we discuss the curvatures of potatoes embedded in \( \mathbb{R}^3\) and systematically derive the notions of principal, Gaussian, and mean curvatures.
 The prerequisites are linear algebra, in particular, the notions of eigenvalues and eigenvectors, and multi-variable calculus.</p>
-<h2><a class="header" href="#would-i-ever-lie-group-to-you" id="would-i-ever-lie-group-to-you">Would I Ever Lie Group to You?</a></h2>
+<h2 id="would-i-ever-lie-group-to-you"><a class="header" href="#would-i-ever-lie-group-to-you">Would I Ever Lie Group to You?</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2018-would-i-ever-Lie-group-to-you/blob/main/output/index.pdf">Notes.</a></p>
 <p>I taught this week-long class at Mathcamp 2018.
 This is a class about matrix groups and how they arise as symmetries of spaces.
 The prerequisites are linear algebra and group theory, in particular, group actions.</p>
-<h2><a class="header" href="#riemann-surfaces" id="riemann-surfaces">Riemann Surfaces</a></h2>
+<h2 id="riemann-surfaces"><a class="header" href="#riemann-surfaces">Riemann Surfaces</a></h2>
 <p><a href="https://github.com/apurvnakade/mc2019-Riemann-surfaces/tree/main/output">Problem Sets.</a></p>
 <p>I taught this week-long class at Mathcamp 2019.
 In this class, we construct Riemann surfaces as &quot;graphs&quot; of holomorphic functions.
@@ -218,25 +218,25 @@ The prerequisites are complex analysis.</p>
 <!-- ## The Quantum Spring -->
 <!-- [Notes.](https://github.com/apurvnakade/mc2018-the-quantum-spring/blob/main/output/index.pdf) -->
 <!-- These are notes from a 2-day talk I gave at Mathcamp 2018 about the harmonic oscillator. -->
-<h2><a class="header" href="#assorted-notes" id="assorted-notes">Assorted notes</a></h2>
+<h2 id="assorted-notes"><a class="header" href="#assorted-notes">Assorted notes</a></h2>
 <p>The following are a few other classes I taught at Mathcamp. The notes are not very polished.</p>
-<h3><a class="header" href="#how-riemann-finally-understood-logarithms" id="how-riemann-finally-understood-logarithms">How Riemann finally understood logarithms</a></h3>
+<h3 id="how-riemann-finally-understood-logarithms"><a class="header" href="#how-riemann-finally-understood-logarithms">How Riemann finally understood logarithms</a></h3>
 <p><a href="https://drive.google.com/file/d/1T1iJ2Mw4VupMr9CKs_NriwSWdoPHmMUL/view">Notes.</a>
 I taught this week-long class at Mathcamp 2019.
 In this class, we talked about inverses of holomorphic functions, branch cuts, and Riemann surfaces.</p>
-<h3><a class="header" href="#how-to-glue-donuts" id="how-to-glue-donuts">How to glue donuts</a></h3>
+<h3 id="how-to-glue-donuts"><a class="header" href="#how-to-glue-donuts">How to glue donuts</a></h3>
 <p><a href="https://drive.google.com/file/d/1iQ_-iqu1x4ueYT4ucNbb_WgAeaf19Ysc/view">Notes.</a>
 I taught this week-long class at Mathcamp 2019.
 In this class, we talked about cutting and pasting methods in topology and concluded with the Heegard splittings of the 3-sphere.</p>
-<h3><a class="header" href="#all-things-manifoldy" id="all-things-manifoldy">All things manifoldy</a></h3>
+<h3 id="all-things-manifoldy"><a class="header" href="#all-things-manifoldy">All things manifoldy</a></h3>
 <p><a href="https://github.com/apurvnakade/mc2017/tree/main/01%20All%20things%20manifoldy">Notes.</a>
 I taught this week-long class at Mathcamp 2017.
 In this class, we talked about topological manifolds, cutting and pasting methods in topology, classification of surfaces, Dehn twists, and concluded with the Heegard splittings of the 3-sphere.</p>
-<h3><a class="header" href="#euler-characteristic" id="euler-characteristic">Euler Characteristic</a></h3>
+<h3 id="euler-characteristic"><a class="header" href="#euler-characteristic">Euler Characteristic</a></h3>
 <p><a href="https://github.com/apurvnakade/mc2017/tree/main/02%20Euler%20Characteristic">Notes.</a>
 I taught this week-long class at Mathcamp 2017.
 In this class, we talked about Euler characteristics of surfaces, vector fields, the hairy-ball theorem, and the Gauss-Bonnet theorem.</p>
-<h3><a class="header" href="#symmetries-of-spaces" id="symmetries-of-spaces">Symmetries of Spaces</a></h3>
+<h3 id="symmetries-of-spaces"><a class="header" href="#symmetries-of-spaces">Symmetries of Spaces</a></h3>
 <p><a href="https://github.com/apurvnakade/mc2017/tree/main/03%20Symmetries%20of%20Spaces">Notes.</a>
 I taught this week-long class at Mathcamp 2017.
 This is a class about matrix groups and how they arise as symmetries of spaces.</p>
