--- a/resources.html
+++ b/resources.html
@@ -162,9 +162,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#resources" id="resources">Resources</a></h1>
+                        <h1 id="resources"><a class="header" href="#resources">Resources</a></h1>
 <p>This page is under construction. I intend to post useful links here about only math resources.</p>
-<h2><a class="header" href="#open-source-textbooks" id="open-source-textbooks">Open source textbooks</a></h2>
+<h2 id="open-source-textbooks"><a class="header" href="#open-source-textbooks">Open source textbooks</a></h2>
 <!-- - [linear algebra resources] -->
 <ul>
 <li><a href="https://oasis.geneseo.edu/index.php">Openly Available Sources Integrated Search</a></li>
@@ -174,7 +174,7 @@
 <li><a href="https://aimath.org/textbooks/approved-textbooks/">American Institute of Mathematics</a></li>
 <li><a href="http://discrete.openmathbooks.org/dmoi3.html">Discrete Mathematics</a></li>
 </ul>
-<h3><a class="header" href="#ibl-textbooks" id="ibl-textbooks">IBL textbooks</a></h3>
+<h3 id="ibl-textbooks"><a class="header" href="#ibl-textbooks">IBL textbooks</a></h3>
 <ul>
 <li><a href="https://activecalculus.org/">Active Calculus Textbooks</a></li>
 </ul>
