--- a/resume.html
+++ b/resume.html
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#résumé" id="résumé">Résumé</a></h1>
+                        <h1 id="résumé"><a class="header" href="#résumé">Résumé</a></h1>
 <p><a href="https://drive.google.com/file/d/1gjjdAYYkMuSBC6xEMi96PKej3IxA25VC/view?usp=sharing">CV</a>  
 <a href="https://tinyurl.com/nakade-evals">Teaching Evaluations</a></p>
 <p>I did my bachelor's in computer science and engineering from Indian Institute of Technology, Kanpur.
