--- a/teaching.html
+++ b/teaching.html
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#teaching" id="teaching">Teaching</a></h1>
+                        <h1 id="teaching"><a class="header" href="#teaching">Teaching</a></h1>
 <figure class="right">
 <a href="https://en.wikipedia.org/wiki/Don_Quixote_(Picasso)"><img src="https://upload.wikimedia.org/wikipedia/en/7/73/Don_Quixote_%281955%29_by_Pablo_Picasso.jpg" width="200px" /></a>
 <figcaption>
