--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#apurva-nakade" id="apurva-nakade">Apurva Nakade</a></h1>
+                        <h1 id="apurva-nakade"><a class="header" href="#apurva-nakade">Apurva Nakade</a></h1>
 <figure class="right">
     <img src="images/me0.jpg" width="200px"/>
     <figcaption>
