--- a/jhu.html
+++ b/jhu.html
@@ -162,9 +162,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#jhu" id="jhu">JHU</a></h1>
+                        <h1 id="jhu"><a class="header" href="#jhu">JHU</a></h1>
 <!-- While I was a grad student at JHU I got a chance to design and teach a couple of intersession courses and a semester long honors single variable course for two semesters. -->
-<h2><a class="header" href="#honors-single-variable-calculus" id="honors-single-variable-calculus">Honors Single Variable Calculus</a></h2>
+<h2 id="honors-single-variable-calculus"><a class="header" href="#honors-single-variable-calculus">Honors Single Variable Calculus</a></h2>
 <p><a href="https://github.com/apurvnakade/jhu2017-18-honors-single-variable-calculus/blob/main/2017/output/ClassNotes.pdf">Notes v2017.</a>   <a href="https://github.com/apurvnakade/jhu2017-18-honors-single-variable-calculus/blob/main/2018/output/ClassNotes.pdf">Notes v2018.</a></p>
 <p>For two semesters, Fall 2017 &amp; 2018, I taught an accelerated honors single variable calculus course at JHU.
 The course covers two semesters worth of calculus (integration and differentiation) in one semester.
@@ -173,13 +173,13 @@ The first iteration of the notes contain only problems and is quite challenging.
 The second iteration contains more theory and explanations and is relatively easier to follow.
 The prerequisites are pre-calculus.
 It is recommended to have done an introductory course on basic calculus and to have some exposure to mathematical proofs before using these notes.</p>
-<h2><a class="header" href="#symmetries--polynomials" id="symmetries--polynomials">Symmetries &amp; Polynomials</a></h2>
+<h2 id="symmetries--polynomials"><a class="header" href="#symmetries--polynomials">Symmetries &amp; Polynomials</a></h2>
 <p><a href="https://github.com/apurvnakade/jhu2018-symmetries-and-polynomials/blob/main/output/index.pdf">Notes.</a></p>
 <p>I taught this 2-week class in the winter break (intersession) of 2018 at JHU.
 This class introduces non-math majors to group theory and its connections to roots of polynomials, in particular, the unsolvability of the quintic.
 The class is designed in an IBL-format - you're expected to solve all the problems in each section before moving to the next and in the process learn the subject.
 The prerequisites are basic proof techniques.</p>
-<h2><a class="header" href="#hitchhikers-guide-to-algebraic-topology" id="hitchhikers-guide-to-algebraic-topology">Hitchhiker's Guide to Algebraic Topology</a></h2>
+<h2 id="hitchhikers-guide-to-algebraic-topology"><a class="header" href="#hitchhikers-guide-to-algebraic-topology">Hitchhiker's Guide to Algebraic Topology</a></h2>
 <p><a href="https://apurvanakade.github.io/courses/2017_h2g2_alg_top/index.html">Course Website.</a></p>
 <p>I taught this 2-week class in the winter break (intersession) of 2017 at JHU.
 The goal was to introduce non-math majors to algebraic topology and to explore some of its applications to other areas of math and science.
