--- a/professional_development.html
+++ b/professional_development.html
@@ -162,19 +162,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#professional-development" id="professional-development">Professional Development</a></h1>
+                        <h1 id="professional-development"><a class="header" href="#professional-development">Professional Development</a></h1>
 <p>Following are some programs that have helped me greatly on my journey of becoming a math educator.</p>
-<h2><a class="header" href="#canadausa-mathcamp" id="canadausa-mathcamp">Canada/USA Mathcamp</a></h2>
+<h2 id="canadausa-mathcamp"><a class="header" href="#canadausa-mathcamp">Canada/USA Mathcamp</a></h2>
 <p><a href="https://www.mathcamp.org/">Canada/USA <img src="images/mathcamp-icon.png" alt="Mathcamp" /></a> is an intensive 5-week-long <strike>summer program</strike> cult for mathematically talented high school students.
 I was fortunate to be able to participate in this amazing place for four summers.
 Here, I had the unique opportunity to constantly experiment with my teaching and I learned a lot from my fellow educators and students.
 If you are a high-school student/graduate student interested in Canada/USA Mathcamp, please do not hesitate to reach out to me for information.
 Below are notes from some of the classes I designed and taught at Mathcamp.</p>
-<h2><a class="header" href="#teaching-academy-jhu" id="teaching-academy-jhu">Teaching Academy, JHU</a></h2>
+<h2 id="teaching-academy-jhu"><a class="header" href="#teaching-academy-jhu">Teaching Academy, JHU</a></h2>
 <p>I took a semester long course at the <a href="https://cer.jhu.edu/teaching-academy">Teaching Academy</a> at JHU while I was a graduate student.
 The Teaching Academy offers Ph.D. students and Post-doctoral Fellows from all divisions across Johns Hopkins University, college teacher training and academic career preparation opportunities through courses, workshops, teaching practicums, teaching-as-research fellowships, and individual consultation.
 This program exposed me to the concept of teaching as an intellectual endeavor and really got me interested in my current career as a math educator.</p>
-<h2><a class="header" href="#project-next-maa" id="project-next-maa">Project NExT, MAA</a></h2>
+<h2 id="project-next-maa"><a class="header" href="#project-next-maa">Project NExT, MAA</a></h2>
 <p>Mathematical American Association's <a href="https://www.maa.org/programs-and-communities/professional-development/project-next">Project NExT</a> (New Experiences in Teaching) is a professional development program for new or recent Ph.D.s in the mathematical sciences. It addresses all aspects of an academic career: improving the teaching and learning of mathematics, engaging in research and scholarship, finding exciting and interesting service opportunities, and participating in professional activities. For me the greatest value of this program is the opportunity it provides to connect to with and learn from other math educators from all over the country.</p>
 
                     </main>
