--- a/uwo.html
+++ b/uwo.html
@@ -162,13 +162,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#uwo" id="uwo">UWO</a></h1>
-<h2><a class="header" href="#algebraic-topology" id="algebraic-topology">Algebraic Topology</a></h2>
+                        <h1 id="uwo"><a class="header" href="#uwo">UWO</a></h1>
+<h2 id="algebraic-topology"><a class="header" href="#algebraic-topology">Algebraic Topology</a></h2>
 <p><a href="https://github.com/apurvnakade/uwo2021-algebraic-topology/tree/main/output">Problem Sets.</a></p>
 <p>In Winter 2021, I taught a semester-long course at UWO on Algebraic Topology aimed at graduate students and upper-level undergrads.
 The main textbook for the course was <a href="http://pi.math.cornell.edu/%7Ehatcher/AT/ATpage.html">Hatcher</a> but I rarely used the book at all.
 The course covered the fundamental group, covering spaces, and singular homology.</p>
-<h2><a class="header" href="#discrete-math" id="discrete-math">Discrete Math</a></h2>
+<h2 id="discrete-math"><a class="header" href="#discrete-math">Discrete Math</a></h2>
 <p>In Fall 2020, I taught a semester-long at UWO on Discrete Math aimed at second-year undergrads majoring in computer science. The course was <em>fully asynchronous</em> and I had to come up with several innovations to make it work.
 I curated a textbook on <a href="https://learn.zybooks.com/zybook/UWOMath2151ANakadeFall2020">zyBooks</a> and created several <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">videos on YouTube</a> to accompany the text. I used <a href="https://piazza.com/class/kd1rr8nxc6z4b5">Piazza</a> as a platform for discussions.
 With a lot of help from my department, we also created hundreds of questions on <a href="https://webwork.maa.org/">WeBWork</a> which were then used the exams.
