Move links to github.

--- a/drp.html
+++ b/drp.html
@@ -164,9 +164,7 @@
                     <main>
                         <h1 id="drp"><a class="header" href="#drp">DRP</a></h1>
 <p>The Directed Reading Program is a program in which undergrads are paired with a graduate student/postdoc whose interests align with theirs and they study a topic of their choice for one semester.
-It is intended to help motivated students explore topics in more depth than possible in a classroom setting.</p>
-<p>I've helped start and organize the <a href="https://www.math.uwo.ca/undergraduate/directedreadingprogram.html">DRP at UWO</a> and in the past have co-organized the <a href="http://www.math.jhu.edu/drp.html">DRP at JHU</a>.
-If you are interested in the DRP or would like to run one at your university, please don't hesitate to reach out to me.
+It is intended to help motivated students explore topics in more depth than possible in a classroom setting.
 Following is the list of projects I've mentored in the past.</p>
 <ul>
 <li>Clare Bedford, Surreal Numbers. (<a href="https://www.math.uwo.ca/undergraduate/directedreadingprogram.html">UWO, Winter 2021</a>)</li>
@@ -180,6 +178,8 @@ Following is the list of projects I've mentored in the past.</p>
 Spring 2018</a>)</li>
 <li>Chris Chia, The Knot Book by Adams Collins. (<a href="http://www.math.jhu.edu/drp.html#Fall2017">JHU, Fall 2017</a>)</li>
 </ul>
+<p>I've helped start and organize the <a href="https://www.math.uwo.ca/undergraduate/directedreadingprogram.html">DRP at UWO</a> and in the past have co-organized the <a href="http://www.math.jhu.edu/drp.html">DRP at JHU</a>.
+If you are interested in participating in the DRP or would like to run one at your university, please don't hesitate to reach out to me.</p>
 
                     </main>
 
