--- a/mathcamp.html
+++ b/mathcamp.html
@@ -221,11 +221,11 @@ The prerequisites are complex analysis.</p>
 <h2 id="assorted-notes"><a class="header" href="#assorted-notes">Assorted notes</a></h2>
 <p>The following are a few other classes I taught at Mathcamp. The notes are not very polished.</p>
 <h3 id="how-riemann-finally-understood-logarithms"><a class="header" href="#how-riemann-finally-understood-logarithms">How Riemann finally understood logarithms</a></h3>
-<p><a href="https://drive.google.com/file/d/1T1iJ2Mw4VupMr9CKs_NriwSWdoPHmMUL/view">Notes.</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/course%20notes/2020MathCamp/How%20Riemann%20finally%20understood%20the%20logarithms.pdf">Notes.</a>
 I taught this week-long class at Mathcamp 2019.
 In this class, we talked about inverses of holomorphic functions, branch cuts, and Riemann surfaces.</p>
 <h3 id="how-to-glue-donuts"><a class="header" href="#how-to-glue-donuts">How to glue donuts</a></h3>
-<p><a href="https://drive.google.com/file/d/1iQ_-iqu1x4ueYT4ucNbb_WgAeaf19Ysc/view">Notes.</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/course%20notes/2020MathCamp/How%20to%20Glue%20donuts.pdf">Notes.</a>
 I taught this week-long class at Mathcamp 2019.
 In this class, we talked about cutting and pasting methods in topology and concluded with the Heegard splittings of the 3-sphere.</p>
 <h3 id="all-things-manifoldy"><a class="header" href="#all-things-manifoldy">All things manifoldy</a></h3>
