--- a/resume.html
+++ b/resume.html
@@ -163,7 +163,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="résumé"><a class="header" href="#résumé">Résumé</a></h1>
-<p><a href="https://drive.google.com/file/d/1gjjdAYYkMuSBC6xEMi96PKej3IxA25VC/view?usp=sharing">CV</a>  
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/CV.pdf">CV</a>
+ 
 <a href="https://tinyurl.com/nakade-evals">Teaching Evaluations</a></p>
 <p>I did my bachelor's in computer science and engineering from Indian Institute of Technology, Kanpur.
 I did a masters in mathematics from Chennai Mathematical Institute followed by Ph.D. in mathematics from Johns Hopkins University.</p>
@@ -186,7 +187,7 @@ Below is a complete list of courses I've taught so far.</p>
 <tr><td></td><td>Online Linear Algebra</td><td>Summer 2014</td><td>34</td><td>All years undergrad</td></tr>
 <tr><td>Mathcamp</td><td>Several</td><td>Summers 2017-20</td><td>-</td><td>High school &amp; middle school</td></tr>
 </tbody></table>
-<p>Course websites: <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKkdSQB2tVu_KcYMWhZpK19J">Calc '19</a>, <a href="https://drive.google.com/drive/folders/1MkXy0CPOKqSJANr9QSD4gwYdMYjVcdmV?usp=sharing">Calc '20</a>, <a href="https://drive.google.com/drive/folders/1_lSraXoUwk7CmStg23T1nHpYvf9zq9jA?usp=sharing">DiffEq '17</a>, <a href="https://drive.google.com/drive/folders/199dY1MF3TWhJ6gUKQyPf_7YK6rO36HZc?usp=sharing">Calc '16</a>, <a href="https://drive.google.com/drive/folders/1X7WKPhBljbXt6dBt278t2lKUlWUKIU5Z?usp=sharing">DiffEq '15</a>.</p>
+<p>Course websites: <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2019Calc1000A">Calc '19</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2017DiffEq">DiffEq '17</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2017DiffEq">Calc '16</a>, <a href="https://github.com/apurvnakade/PDFs/tree/main/course%20notes/2015DiffEq">DiffEq '15</a>.</p>
 
                     </main>
 
