--- a/expository_notes.html
+++ b/expository_notes.html
@@ -184,41 +184,44 @@ The notes have not been proofread and might contain errors.</p>
 </ul>
 <!-- markdown-toc end -->
 <h3 id="what-is-a-spectrum"><a class="header" href="#what-is-a-spectrum">What is a Spectrum?</a></h3>
-<p><a href="https://drive.google.com/file/d/16zRKLkBl4skQ0UNKRXfM7d51qWnBLwGF/view?usp=sharing">Slides</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/What%20is%20a%20Spectrum_.pdf">Slides</a>
 from a talk I gave on an introduction to spectra in homotopy theory.</p>
 <h3 id="h-principles-msri-summer-school"><a class="header" href="#h-principles-msri-summer-school">h-principles MSRI Summer School</a></h3>
-<p><a href="https://drive.google.com/file/d/1uecVJP6Xl1vScsswWGqBtJ1s3o9PwG8C/view?usp=sharing">Notes</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Conference%20Notes/MSRI-h-principles.pdf">Notes</a>
 from the MSRI summer school on the h-principle.</p>
 <h3 id="connections-on-principal-bundles-and-classical-electromagnetism"><a class="header" href="#connections-on-principal-bundles-and-classical-electromagnetism">Connections on Principal Bundles and Classical Electromagnetism</a></h3>
-<p><a href="https://drive.google.com/file/d/1kFh_-_DmR4wt-sDBiOggM5a5U-5W7V_l/view?usp=sharing">Notes</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/Connections%20on%20Principal%20Bundles%20and%20Classical%20Electromagnetism.pdf">Notes</a>
 on the connection between connections on principal bundles and electromagnetism.</p>
 <h3 id="vector-fields-on-spheres"><a class="header" href="#vector-fields-on-spheres">Vector Fields on Spheres</a></h3>
-<p><a href="https://drive.google.com/file/d/13R3_9BLfbkL9PDbhaHt9aa4FDWacEsMZ/view?usp=sharing">Summary</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/CMI/vector%20fields%20on%20spheres/vector_fields_on_spheres.pdf">Summary</a>
 of Adams' paper titled <em>Vector Fields on Spheres</em>.</p>
 <h3 id="steifel-whitney-numbers"><a class="header" href="#steifel-whitney-numbers">Steifel Whitney Numbers</a></h3>
-<p><a href="https://drive.google.com/file/d/1W9TDU1SaWVLghrSaw8Dg04vdfW9veW_C/view?usp=sharing">Proof</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/SW%20numbers.pdf">Proof</a>
 of Thom's theorem about the vanishing of Steifel-Whitney numbers.</p>
 <h3 id="homotopy-of-mo"><a class="header" href="#homotopy-of-mo">Homotopy of MO</a></h3>
-<p><a href="https://drive.google.com/file/d/1vLUuLchIv4M-uVHcykqFLByWQ76ezZtq/view?usp=sharing">Computation</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/Homotopy%20of%20MO/Homotopy%20of%20MO.pdf">Computation</a>
 of \( \mathbb{Z}/2 \) homotopy groups of real bordism spectrum.</p>
 <h3 id="representation-theory-of-symmetric-group"><a class="header" href="#representation-theory-of-symmetric-group">Representation Theory of Symmetric Group</a></h3>
-<p><a href="https://drive.google.com/file/d/1xMliaDffPi6yUzp5U2d_wIdPJ6yyfLE1/view?usp=sharing">Notes</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/CMI/Representation%20Theory%20of%20Symmetric%20Group.pdf">Notes</a>
 on the Okounkov-Vershik approach to representations of symmetric groups.</p>
 <h3 id="geometry-of-dirac-operators"><a class="header" href="#geometry-of-dirac-operators">Geometry of Dirac Operators</a></h3>
-<p><a href="https://drive.google.com/file/d/1I5uhi9sli2ebSAedRjjFWHSVw7nNhBZ9/view?usp=sharing">Notes</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/Geometry%20of%20Dirac%20Operators/Student_talk.pdf">Notes</a>
 on Dirac operators and the Atiyah-Singer index theorem.</p>
 <h3 id="fios-and-lagrangian-submanifolds"><a class="header" href="#fios-and-lagrangian-submanifolds">FIOs and Lagrangian Submanifolds</a></h3>
-<p><a href="https://drive.google.com/file/d/1jrV_2VjR1xGa6eham0FIxiVvMngsF8Xs/view?usp=sharing">Talk</a> on Fourier integral operators and Lagrangian submanifolds.</p>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/FIOs%20and%20Lagrangian%20Submanifolds.pdf">Talk</a>
+on Fourier integral operators and Lagrangian submanifolds.</p>
 <h3 id="symplectic-geometry-course-notes"><a class="header" href="#symplectic-geometry-course-notes">Symplectic Geometry Course Notes</a></h3>
-<p><a href="https://drive.google.com/file/d/1YbjFhmTt6yvCdxyb4nT7aVz9g4w0E-PN/view">Notes</a> on a course on symplectic geometry.</p>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/Symplectic%20Geometry.pdf">Notes</a>
+on a course on symplectic geometry.</p>
 <h3 id="finite-gauge-groups-tqfts"><a class="header" href="#finite-gauge-groups-tqfts">Finite Gauge Groups TQFTs</a></h3>
-<p><a href="https://drive.google.com/file/d/18_vHDgWnKtO9qgqfhRP4YLeDT26l_Fay/view?usp=sharing">Notes</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/Finite%20Gauge%20Group%20Theory/Finite%20Group%20Gauge%20Theory.pdf">Notes</a>
 on finite gauge group TQFTs.</p>
 <h3 id="classical-lie-groups"><a class="header" href="#classical-lie-groups">Classical Lie Groups</a></h3>
-<p><a href="https://drive.google.com/file/d/15SwA8TDmLUMElPQYvhMcIAttXgNzuKbz/view?usp=sharing">Notes</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Bits%20and%20Pieces/Classical%20Lie%20Groups.pdf">Notes</a>
 on computations from the book by <em>Brocker - Tom Dieck</em>.</p>
 <h3 id="mosher-and-tangora-notes"><a class="header" href="#mosher-and-tangora-notes">Mosher and Tangora Notes</a></h3>
-<p><a href="https://drive.google.com/drive/folders/1vSFBZh3cuDoJPglIeBmLUV1Ur0RvhZ-p?usp=sharing">Handwritten notes</a> taken from studying the book <em>Mosher and Tangora</em>.</p>
+<p><a href="https://github.com/apurvnakade/PDFs/tree/main/assorted%20notes/JHU%20Course%20Notes/Mosher%20and%20Tangora">Handwritten notes</a>
+taken from studying the book <em>Mosher and Tangora</em>.</p>
 
                     </main>
 
