--- a/math_computers.html
+++ b/math_computers.html
@@ -164,12 +164,13 @@
                     <main>
                         <h1 id="math--computers"><a class="header" href="#math--computers">Math &amp; Computers</a></h1>
 <h2 id="proof-formalization"><a class="header" href="#proof-formalization">Proof Formalization</a></h2>
-<p>I have recently gotten interesting in teaching math to computers using the <a href="https://leanprover-community.github.io/">Lean theorem prover</a>. This is different from doing computations as here we are trying to teach math to computers the same way we understand it. I taught a course about it at <a href="mathcamp.html#lean-at-mc2020">Mathcamp 2020</a>. You can find my experiments on
+<p>I have recently gotten interested in teaching math to computers using the <a href="https://leanprover-community.github.io/">Lean theorem prover</a>. This is different from doing computations as here we are trying to teach math to computers the same way we understand it. I taught a course about it at <a href="mathcamp.html#lean-at-mc2020">Mathcamp 2020</a>. You can find my experiments on
 my <a href="https://github.com/apurvnakade?tab=repositories&amp;q=lean"><i id="git-repository-button" class="fa fa-github"></i></a>.</p>
 <p>My primary interest in Lean is as a potential tool for teaching math proofs. My secondary interest lies in combining machine learning and theorem proving. These are very long term goals as the field of theorem proving, although rapidly growing, is still very nascent.</p>
 <h2 id="work-in-progress"><a class="header" href="#work-in-progress">Work in Progress</a></h2>
 <p>I am interested in exploring languages that allow you to create various webapps for math exposition. Following are some that I'm interested in exploring further:</p>
 <ol>
+<li><a href="https://github.com/ManimCommunity/manim#readme">Manim</a></li>
 <li><a href="https://asymptote.sourceforge.io/">Asymptote</a></li>
 <li><a href="https://ipesek.github.io/jsxgraphbook/1_introduction.html">JSXGraph</a></li>
 <li>Babylon</li>
