--- a/research.html
+++ b/research.html
@@ -168,21 +168,16 @@
 interests are in understanding how homotopy theoretic tools can be used
 to solve problems from other areas of math.</p>
 <h2 id="2-groups-in-equivariant-elliptic-cohomology"><a class="header" href="#2-groups-in-equivariant-elliptic-cohomology">2-groups in Equivariant Elliptic Cohomology</a></h2>
-<p>I got involved in this project thanks to an <a href="http://www.ams.org/programs/research-communities/2019MRC-Geometry">MRC Workshop</a>. 2-groups are
-higher categorical variants of groups. The goal of this project is to
-find a 2-categorical interpretation of some of naturally occurring
-objects (Drinfield double of a group) in mathematical physics and extend
-them using ideas from Equivariant Elliptic Cohomology.</p>
+<p>I got involved in this project thanks to an <a href="http://www.ams.org/programs/research-communities/2019MRC-Geometry">MRC Workshop</a>.
+2-groups are higher categorical variants of groups.
+The goal of this project is to find a 2-categorical interpretation of some of naturally occurring objects (Drinfield double of a group) in mathematical physics and extend them using ideas from Equivariant Elliptic Cohomology.</p>
 <h2 id="an-application-of-the-h-principle-to-manifold-calculus"><a class="header" href="#an-application-of-the-h-principle-to-manifold-calculus">An application of the h-principle to Manifold Calculus</a></h2>
-<p>This was my PhD thesis. I applied homotopy theoretic techniques
-to study problems for differential geometry. Here is <a href="https://doi.org/10.1007/s40062-020-00255-3">the paper</a> (<a href="https://arxiv.org/abs/1711.07670">arXiv
-version</a>) based on the <a href="https://drive.google.com/file/d/1fHkImG-CTB2liHDIAo3YmzqBmN-Qibx6/view?usp=sharing">thesis</a>.
-Here are some notes <a href="https://drive.google.com/file/d/1h8pHb-5HmM55_bwdzPYDB7cVHo4MHy-I/view?usp=sharing">notes1</a>, <a href="https://drive.google.com/file/d/1D8TSRQFVUVjM3wQ74npbH2hibrHsDho_/view?usp=sharing">notes2</a> from the talks I gave on this
-topic.</p>
+<p>This was my PhD thesis. I applied homotopy theoretic techniques to study problems for differential geometry.
+Here is <a href="https://doi.org/10.1007/s40062-020-00255-3">the paper</a> (<a href="https://arxiv.org/abs/1711.07670">arXiv version</a>) based on the <a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Research/PhD%20Thesis.pdf">thesis</a>.
+Here are some notes <a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Research/2019%20-%20OSU%20Conference.pdf">notes1</a>, <a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Research/2019%20-%20Thesis%20Defense.pdf">notes2</a> from the talks I gave on this topic.</p>
 <h2 id="protein-folding-using-markov-chains"><a class="header" href="#protein-folding-using-markov-chains">Protein folding using Markov chains</a></h2>
-<p>During my undergrad, I briefly worked on a project involving some
-protein folding models using basic linear algebra.
-<a href="https://drive.google.com/file/d/1xT6C4O_fMvpqoJCfnSq1ypeikM6XNMjw/view?usp=sharing">Information Processing Letters, IPL4801</a>.</p>
+<p>During my undergrad, I briefly worked on a project involving some protein folding models using basic linear algebra.
+<a href="https://github.com/apurvnakade/PDFs/blob/main/assorted%20notes/Research/2012%20-%20Protein%20Folding.pdf">Information Processing Letters, IPL4801</a>.</p>
 <h2 id="projects-that-did-not-quite-work-out"><a class="header" href="#projects-that-did-not-quite-work-out">Projects that did not quite work out</a></h2>
 <ul>
 <li>2-groups in HoTT</li>
