Monospace not displaying on phone.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <img src="images/me0.jpg" width="200px"/>
     <figcaption>
         <a href = "https://en.wikipedia.org/wiki/Help:IPA/Marathi"
-           style = "font-family: monospace; font-size: 0.75em"
+           style = "font-size: 0.75em"
            target = "_blank">
             [əpurʋə nakade]
         </a>
