--- a/etc.html
+++ b/etc.html
@@ -150,7 +150,7 @@
 </figure>
 <p>Fun for me is <a href="https://apurvanakade.github.io/blog/notes/books/">reading books</a>. I love to <a href="https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&amp;usp=sharing">travel</a>. I type in dvorak.
 I love designing websites like this one (built using mdbook), <a href="https://github.com/apurvnakade/HugoTheme">my blog's theme</a>
-(built using Hugo), and the <a href="http://www.math.jhu.edu/drp.html">JHU DRP website</a>. I also love to write in my <a href="./blog">personal blog</a>
+(built for Hugo), and the <a href="http://www.math.jhu.edu/drp.html">JHU DRP website</a>. I also love to write in my <a href="./blog">personal blog</a>
 and my <a href="https://notleftasanexercise.wordpress.com/">blog about teaching</a>.
 I bake a lot and am an avid yoga practitioner.
 I'm a huge organizational nerd and a big fan of org-mode.
