--- a/mathcamp.html
+++ b/mathcamp.html
@@ -149,7 +149,9 @@
     </a>
 </h1>
 <h2 id="lean-at-mc2020"><a class="header" href="#lean-at-mc2020">Lean at MC2020</a></h2>
-<p><a href="https://apurvanakade.github.io/courses/lean_at_MC2020/index.html">Notes.</a></p>
+<p><a href="https://apurvanakade.github.io/courses/lean_at_MC2020/index.html">Notes.</a>
+ 
+<a href="https://github.com/apurvnakade/mc2020-Lean">Source Code.</a></p>
 <p><img src="https://leanprover.github.io/images/lean_logo2.svg"
      alt="Lean"
      style="float:right"
@@ -252,6 +254,9 @@ In this class, we talked about Euler characteristics of surfaces, vector fields,
 <p><a href="https://github.com/apurvnakade/mc2017/tree/main/03%20Symmetries%20of%20Spaces">Notes.</a>
 I taught this week-long class at Mathcamp 2017.
 This is a class about matrix groups and how they arise as symmetries of spaces.</p>
+<div class="footnote">
+    Disclaimer: The images on this page are from Wikipedia and other online open access sources.
+</div>
 
                     </main>
 
