--- a/resources.html
+++ b/resources.html
@@ -144,7 +144,7 @@
                     <main>
                         <h1 id="resources"><a class="header" href="#resources">Resources</a></h1>
 <p>This page is under construction. I intend to post useful links here about only math resources.</p>
-<h2 id="open-source-textbooks"><a class="header" href="#open-source-textbooks">Open source textbooks</a></h2>
+<h2 id="open-source-textbooks"><a class="header" href="#open-source-textbooks">Open-Source Textbooks</a></h2>
 <!-- - [linear algebra resources] -->
 <ul>
 <li><a href="https://oasis.geneseo.edu/index.php">Openly Available Sources Integrated Search</a></li>
@@ -154,10 +154,17 @@
 <li><a href="https://aimath.org/textbooks/approved-textbooks/">American Institute of Mathematics</a></li>
 <li><a href="http://discrete.openmathbooks.org/dmoi3.html">Discrete Mathematics</a></li>
 </ul>
-<h3 id="ibl-textbooks"><a class="header" href="#ibl-textbooks">IBL textbooks</a></h3>
+<h3 id="ibl-textbooks"><a class="header" href="#ibl-textbooks">IBL Textbooks</a></h3>
 <ul>
 <li><a href="https://activecalculus.org/">Active Calculus Textbooks</a></li>
 </ul>
+<h2 id="open-source-math-software"><a class="header" href="#open-source-math-software">Open-Source Math Software</a></h2>
+<ol>
+<li><a href="https://www.sagemath.org/">Sage Math</a></li>
+<li><a href="https://github.com/ManimCommunity/manim#readme">Manim</a></li>
+<li><a href="https://asymptote.sourceforge.io/">Asymptote</a></li>
+<li><a href="https://ipesek.github.io/jsxgraphbook/1_introduction.html">JSXGraph</a></li>
+</ol>
 
                     </main>
 
