--- a/resume.html
+++ b/resume.html
@@ -143,15 +143,16 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="résumé"><a class="header" href="#résumé">Résumé</a></h1>
-<p><a href="https://github.com/apurvnakade/PDFs/blob/main/CV.pdf">CV</a>
+<p><a href="https://github.com/apurvnakade/PDFs/blob/main/CV.pdf">CV.</a>
  
-<a href="https://tinyurl.com/nakade-evals">Teaching Evaluations</a></p>
+<a href="https://tinyurl.com/nakade-evals">Teaching Evaluations.</a></p>
 <p>I did my bachelor's in computer science and engineering from Indian Institute of Technology, Kanpur.
 I did a masters in mathematics from Chennai Mathematical Institute followed by Ph.D. in mathematics from Johns Hopkins University.</p>
 <p>Since 2019, I have been a postdoctoral fellow at University of Western Ontario.
 Starting Fall 2021, I'll be a postdoctoral lecturer at Northwestern University.
-I'm a member of the <a href="https://www.maa.org/programs-and-communities/professional-development/project-next">Project NExT</a> Brown'20 cohort. I also have a <a href="https://cer.jhu.edu/teaching-academy/coc/overview">Certificate of Completion</a> from the Teaching Academy at JHU.</p>
-<p>I was a mentor for Canada/USA Mathcamp from 2017-2019 and an academic coordinator for the summer of 2018.
+I'm a member of the <a href="https://www.maa.org/programs-and-communities/professional-development/project-next">Project NExT</a> Brown'20 cohort.
+I also a <a href="https://cer.jhu.edu/teaching-academy/coc/overview">certification</a> from the <a href="https://cer.jhu.edu/teaching-academy/">Teaching Academy at JHU</a>.</p>
+<p>I was a mentor for <a href="https://www.mathcamp.org/">Canada/USA Mathcamp</a> from 2017-2019 and an academic coordinator for the summer of 2018.
 Below is a complete list of courses I've taught so far.</p>
 <table><thead><tr><th>University</th><th>Course</th><th>Years</th><th># of students</th><th></th></tr></thead><tbody>
 <tr><td>UWO</td><td>Algebraic Topology</td><td>Winter 2021</td><td>10</td><td>Grad</td></tr>
