--- a/uwo.html
+++ b/uwo.html
@@ -150,7 +150,7 @@
      style="float:right"
      width="25%"/></p>
 <p>In Winter 2021, I taught a semester-long course at UWO on Algebraic Topology aimed at graduate students and upper-level undergrads.
-The main textbook for the course was <a href="http://pi.math.cornell.edu/%7Ehatcher/AT/ATpage.html">Hatcher</a> but I rarely ever used the book.
+The main textbook for the course was <a href="http://pi.math.cornell.edu/%7Ehatcher/AT/ATpage.html">Hatcher</a> but I rarely used the book at all.
 The course covered the fundamental group, covering spaces, and singular homology.</p>
 <h2 id="discrete-math"><a class="header" href="#discrete-math">Discrete Math</a></h2>
 <p><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/53c78bc866cb39308e86454d85c902532f52983e"
@@ -159,8 +159,11 @@ The course covered the fundamental group, covering spaces, and singular homology
      width="25%"/></p>
 <p>In Fall 2020, I taught a semester-long at UWO on Discrete Math aimed at second-year undergrads majoring in computer science. The course was <em>fully asynchronous</em> and I had to come up with several innovations to make it work.
 I curated a textbook on <a href="https://learn.zybooks.com/zybook/UWOMath2151ANakadeFall2020">zyBooks</a> and created several <a href="https://www.youtube.com/playlist?list=PLXAOfwfSuiKm3cL-JftD9ndrjYi7fPcqN">videos on YouTube</a> to accompany the text. I used <a href="https://piazza.com/class/kd1rr8nxc6z4b5">Piazza</a> as a platform for discussions.
-With a lot of help from my department, we also created hundreds of questions on <a href="https://webwork.maa.org/">WeBWorK</a> which were then used for the exams.
-This was simultaneously the most challenging and the most rewarding course I've ever taught.</p>
+With a lot of help from my department, we also created hundreds of questions on <a href="https://webwork.maa.org/">WeBWork</a> which were then used the exams.
+This simultaneously the most challenging and the most rewarding course I've ever taught.</p>
+<div class="footnote">
+    Disclaimer: The images on this page are from Wikipedia and other online open access sources.
+</div>
 
                     </main>
 
