--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
         <a href = "https://en.wikipedia.org/wiki/Help:IPA/Marathi"
            style = "font-size: 0.75em"
            target = "_blank">
-            [əpurʋə nakade]
+            [əpuːrʋə nakade]
         </a>
     </figcaption>
 </figure>
-<p>I'm a postdoctoral lecturer in the Math Department at Northwestern University. 
-If you're a student or an educator, please feel free to reach out to me.
-The best way to contact me is by <a href="mailto:apurva.nakade@northwestern.edu">email</a>.</p>
+<p>I'm a postdoctoral lecturer in the <a href="https://www.math.northwestern.edu/">Math Department</a> at <a href="https://www.northwestern.edu/">Northwestern University</a>. 
+If you're a student or an educator, please feel free to <a href="mailto:apurva.nakade@northwestern.edu">email</a> me.</p>
+<p>In Fall 2021, I'm teaching Math 220-2 (Single-Variable Integral Calculus) and Math 290-1 (MENU: Linear Algebra and Multivariable Calculus).</p>
 
                     </main>
 
